--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "d3": "^4.2.6",
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1"
-  }
+    "eslint-plugin-react": "^6.4.1",
+    "underscore": "^1.8.3"
+  },
+  "homepage": "http://straiffi.github.io/portfolio"
 }
