--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "eslint-plugin-react": "^6.4.1",
     "underscore": "^1.8.3"
   },
-  "homepage": "http://straiffi.github.io/portfolio"
+  "homepage": "http://straiffi.github.io/"
 }
