--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "gh-pages": "^0.11.0",
     "underscore": "^1.8.3"
   },
-  "homepage": "http://straiffi.github.io/"
+  "homepage": "http://straiffi.github.io/portfolio"
 }
