--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "react-scroll": "^1.4.1",
     "underscore": "^1.8.3"
   },
-  "homepage": "http://straiffi.github.io/portfolio"
+  "homepage": "http://straiffi.github.io"
 }
